polymetrie-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polymetrie-ingress
spec:
  rules:
  - host: polymetrie.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: polymetrie-service
            port:
              number: 80
